--- a/Python/section_2.ipynb
+++ b/Python/section_2.ipynb
@@ -253,6 +253,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 'a'}\n",
+      "{2, 3, 'b'}\n",
+      "{1, 2, 3, 33, 'a', 'b', 22}\n",
+      "{33, 2, 3, 22, 'b'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1, 2, 3, 'a'}\n",
+    "# Adding elements to a set\n",
+    "# a.add('b')\n",
+    "# Cannot access individual elements, but elements can be added and removed\n",
+    "# a.discard('a')\n",
+    "# print(a)\n",
+    "# Check if an element is in the set\n",
+    "# print(1 in a)\n",
+    "\n",
+    "# Set operations: intersection, difference, union, symmetric difference\n",
+    "a = {1, 2, 3, 'a', 'b'}\n",
+    "b = {1, 'a', 22, 33}\n",
+    "\n",
+    "print(a & b) # Intersection: {1, 'a'}\n",
+    "print(a - b) # Difference: {2, 3, 'b'} (elements in a but not in b)\n",
+    "print(a | b) # Union: {1, 2, 3, 33, 'a', 'b', 22} (all elements from both sets, with duplicates removed)\n",
+    "print(a ^ b) # Symmetric difference: {33, 2, 3, 'b', 22}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "124\n",
+      "34.5\n",
+      "4.140000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 123\n",
+    "b = True  # True converts to 1 when performing arithmetic operations, and False converts to 0\n",
+    "print(a+b)\n",
+    "print(12.5+22)\n",
+    "print(True+3.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
