--- a/Python/section_4.ipynb
+++ b/Python/section_4.ipynb
@@ -100,22 +100,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Going up to the person: pretty girl, can you add a wechat?\n"
+      "Approach: Beautiful lady, can I add you on WeChat?\n"
      ]
     }
    ],
    "source": [
     "person = 'girl'\n",
     "if person == 'girl':\n",
-    "    print(\"Going up to the person: pretty girl, can you add a wechat?\")\n",
+    "    # True branch\n",
+    "    print(\"Approach: Beautiful lady, can I add you on WeChat?\")\n",
     "else:\n",
+    "    # False branch\n",
     "    print(\"Just walk away.\")"
    ]
   },
@@ -148,22 +150,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try dating...\n"
+     ]
+    }
+   ],
    "source": [
     "age = 25\n",
     "height = 177\n",
     "sex = 'male'\n",
     "\n",
     "if sex == 'male':\n",
-    "    # can be judged backwards\n",
+    "    # Further checks\n",
     "    if age >= 22 and age <= 35:\n",
-    "        # The age is more appropriate\n",
+    "        # Appropriate age\n",
     "        if height >= 175:\n",
-    "            print(\"Try it on...\")\n",
+    "            print(\"Try dating...\")\n",
     "    else:\n",
-    "        print(\"Forget it...\")\n",
+    "        print(\"Not interested...\")\n",
     "else:\n",
     "    print('Be a BFF.')"
    ]
@@ -189,20 +199,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024 <class 'int'>\n"
+      "2024 <class 'str'>\n"
      ]
     }
    ],
    "source": [
-    "# Get the year entered by the user\n",
-    "year = int(input(\"Please enter a four-digit year: \"))\n",
+    "# Get user input year\n",
+    "year = input(\"Please enter a four-digit year: \")\n",
     "print(year, type(year))"
    ]
   },
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -378,18 +388,17 @@
     "num = 1\n",
     "while num <= 10:\n",
     "    num += 1\n",
-    "    # Determine if the current num is even\n",
+    "    # Check if num is even\n",
     "    if num % 2 == 0:\n",
-    "        continue # Skip this loop and run the next one.\n",
+    "        continue # Skip this iteration and move to the next one\n",
     "    if num == 7:\n",
-    "        break # Jumps out and ends the loop.\n",
-    "    print(num)\n",
-    "    "
+    "        break # Exit the loop and stop execution\n",
+    "    print(num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -422,8 +431,8 @@
    "source": [
     "num = 0\n",
     "while num < 100:\n",
-    "    print('☆', end = \" \")\n",
-    "    # Determine if line breaks are needed\n",
+    "    print('☆', end=\" \")\n",
+    "    # Check if we need to insert a new line\n",
     "    if num % 10 == 9:\n",
     "        print('\\n')\n",
     "    num += 1"
@@ -438,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -469,15 +478,15 @@
     }
    ],
    "source": [
-    "# Colors in columns\n",
+    "# Alternating colors by column\n",
     "num = 0\n",
     "while num < 100:\n",
-    "    # Determine if the current number is base or even\n",
+    "    # Check if the position is even or odd\n",
     "    if num % 2 == 0:\n",
-    "        print('☆', end = \" \")\n",
+    "        print('☆', end=\" \")\n",
     "    else:\n",
-    "        print('★', end = \" \")\n",
-    "    # Determine if a newline is needed\n",
+    "        print('★', end=\" \")\n",
+    "    # Check if we need to insert a new line\n",
     "    if num % 10 == 9:\n",
     "        print('\\n')\n",
     "    num += 1"
@@ -492,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -523,15 +532,15 @@
     }
    ],
    "source": [
-    "# Interlace color\n",
+    "# Alternating colors by row\n",
     "num = 0\n",
     "while num < 100:\n",
-    "    # Use the current line number as the base, take the remainder of 2 and determine parity \n",
+    "    # Check the row number and alternate colors\n",
     "    if num // 10 % 2 == 0:\n",
-    "        print('☆', end = \" \")\n",
+    "        print('☆', end=\" \")\n",
     "    else:\n",
-    "        print('★', end = \" \")\n",
-    "    # Determine if a newline is needed \n",
+    "        print('★', end=\" \")\n",
+    "    # Check if we need to insert a new line\n",
     "    if num % 10 == 9:\n",
     "        print('\\n')\n",
     "    num += 1"
@@ -572,7 +581,7 @@
     "    # The inner loop takes care of the function for the current row, first row 1 column 2 rows 2 columns... ..9 rows, 9 columns.\n",
     "    for y in range(1, x+1):\n",
     "        print(f'{x}x{y}={x*y}', end=\" \")\n",
-    "    # Enter\n",
+    "    # New line for each row\n",
     "    print()"
    ]
   },
@@ -585,14 +594,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fibonacci series: 0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, "
+      "Fibonacci sequence: 0, 1, 1, 2, 3, 5, 8, 13, 21, "
      ]
     }
    ],
@@ -600,22 +609,22 @@
     "\"\"\"\n",
     "0, 1, 1, 2, 3, 5, 8, 13...\n",
     "\"\"\"\n",
-    "# Get user input data\n",
-    "num = int(input('你需要计算多少项？'))\n",
+    "# Get user input for the number of terms\n",
+    "num = int(input('How many terms do you want to calculate?'))\n",
     "n1 = 0\n",
     "n2 = 1\n",
     "count = 2\n",
-    "# Starting with the number after that\n",
+    "# Handle the special cases\n",
     "if num <= 0:\n",
     "    print('Please enter a positive integer.')\n",
     "elif num == 1:\n",
-    "    print(f'Fibonacci series. {n1}')\n",
+    "    print(f'Fibonacci sequence: {n1}')\n",
     "else:\n",
-    "    print(f'Fibonacci series: {n1}, {n2}', end = \", \")\n",
+    "    print(f'Fibonacci sequence: {n1}, {n2}', end=\", \")\n",
     "    while count < num:\n",
     "        n3 = n1 + n2\n",
-    "        print(n3, end = \", \")\n",
-    "        # update data\n",
+    "        print(n3, end=\", \")\n",
+    "        # Update variables\n",
     "        n1, n2 = n2, n3\n",
     "        count += 1"
    ]
@@ -625,39 +634,39 @@
    "metadata": {},
    "source": [
     "lit. buy a hundred chickens with a hundred coins (idiom); fig. a great deal of money for a good cause  \n",
-    "> There are 100 dollars in total and you need to buy 100 chickens. \n",
-    "> A rooster costs 3 yuan per chicken, a hen costs 1 yuan per chicken, and a chick costs 50 cents per chicken. \n",
-    "> Calculate how many options there are for buying 100 chickens for 100 dollars."
+    "- With 100 dollars, buy 100 chickens. \n",
+    "- Roosters cost 3 dollars each, hens cost 1 dollar each, and chicks cost 0.5 dollars each.\n",
+    "- Calculate how many solutions there are to this problem."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 roosters，95 hen，4 chick， total $100.0\n",
-      "2 roosters，90 hen，8 chick， total $100.0\n",
-      "3 roosters，85 hen，12 chick， total $100.0\n",
-      "4 roosters，80 hen，16 chick， total $100.0\n",
-      "5 roosters，75 hen，20 chick， total $100.0\n",
-      "6 roosters，70 hen，24 chick， total $100.0\n",
-      "7 roosters，65 hen，28 chick， total $100.0\n",
-      "8 roosters，60 hen，32 chick， total $100.0\n",
-      "9 roosters，55 hen，36 chick， total $100.0\n",
-      "10 roosters，50 hen，40 chick， total $100.0\n",
-      "11 roosters，45 hen，44 chick， total $100.0\n",
-      "12 roosters，40 hen，48 chick， total $100.0\n",
-      "13 roosters，35 hen，52 chick， total $100.0\n",
-      "14 roosters，30 hen，56 chick， total $100.0\n",
-      "15 roosters，25 hen，60 chick， total $100.0\n",
-      "16 roosters，20 hen，64 chick， total $100.0\n",
-      "17 roosters，15 hen，68 chick， total $100.0\n",
-      "18 roosters，10 hen，72 chick， total $100.0\n",
-      "19 roosters，5 hen，76 chick， total $100.0\n",
+      "Roosters: 1, Hens: 95，Chicks: 4， Total cost: $100.0 dollars\n",
+      "Roosters: 2, Hens: 90，Chicks: 8， Total cost: $100.0 dollars\n",
+      "Roosters: 3, Hens: 85，Chicks: 12， Total cost: $100.0 dollars\n",
+      "Roosters: 4, Hens: 80，Chicks: 16， Total cost: $100.0 dollars\n",
+      "Roosters: 5, Hens: 75，Chicks: 20， Total cost: $100.0 dollars\n",
+      "Roosters: 6, Hens: 70，Chicks: 24， Total cost: $100.0 dollars\n",
+      "Roosters: 7, Hens: 65，Chicks: 28， Total cost: $100.0 dollars\n",
+      "Roosters: 8, Hens: 60，Chicks: 32， Total cost: $100.0 dollars\n",
+      "Roosters: 9, Hens: 55，Chicks: 36， Total cost: $100.0 dollars\n",
+      "Roosters: 10, Hens: 50，Chicks: 40， Total cost: $100.0 dollars\n",
+      "Roosters: 11, Hens: 45，Chicks: 44， Total cost: $100.0 dollars\n",
+      "Roosters: 12, Hens: 40，Chicks: 48， Total cost: $100.0 dollars\n",
+      "Roosters: 13, Hens: 35，Chicks: 52， Total cost: $100.0 dollars\n",
+      "Roosters: 14, Hens: 30，Chicks: 56， Total cost: $100.0 dollars\n",
+      "Roosters: 15, Hens: 25，Chicks: 60， Total cost: $100.0 dollars\n",
+      "Roosters: 16, Hens: 20，Chicks: 64， Total cost: $100.0 dollars\n",
+      "Roosters: 17, Hens: 15，Chicks: 68， Total cost: $100.0 dollars\n",
+      "Roosters: 18, Hens: 10，Chicks: 72， Total cost: $100.0 dollars\n",
+      "Roosters: 19, Hens: 5，Chicks: 76， Total cost: $100.0 dollars\n",
       "There are 20 combinations in total.\n",
       "There are currently 3300 calculations.\n"
      ]
@@ -669,11 +678,11 @@
     "# Inefficient code\n",
     "# for rooster in range(1, 34):\n",
     "#     for hen in range(1, 101):\n",
-    "#         for chick in range(1, 201):\n",
+    "#         for chicks in range(1, 201):\n",
     "#             count += 1\n",
-    "#             # Determine if it's 100 and if it costs $100\n",
-    "#             if rooster + hen + chick == 100 and rooster*3 + hen + chick*0.5 == 100:\n",
-    "#                 print(f'roosters{rooster}，hen{hen}，chick{chick}， total ${rooster*3 + hen + chick*0.5}')\n",
+    "#             # Check if the total number of chickens is 100 and the total cost is 100 dollars\n",
+    "#             if rooster + hen + chicks == 100 and rooster*3 + hen + chicks*0.5 == 100:\n",
+    "#                 print(f'roosters{rooster}，hen{hen}，chicks{chicks}， Total cost: ${rooster*3 + hen + chicks*0.5}')\n",
     "#                 num += 1\n",
     "\n",
     "# Optimized code\n",
@@ -681,9 +690,9 @@
     "    for hen in range(1, 101):\n",
     "        chick = 100 - rooster - hen\n",
     "        count += 1\n",
-    "        # Determine if it's 100 and if it costs $100\n",
+    "        # Check if the total number of chickens is 100 and the total cost is 100 dollars\n",
     "        if rooster + hen + chick == 100 and rooster*3 + hen + chick*0.5 == 100:\n",
-    "            print(f'{rooster} roosters，{hen} hen，{chick} chick， total ${rooster*3 + hen + chick*0.5}')\n",
+    "            print(f'Roosters: {rooster}, Hens: {hen}，Chicks: {chick}， Total cost: ${rooster*3 + hen + chick*0.5} dollars')\n",
     "            num += 1\n",
     "print(f'There are {num} combinations in total.')\n",
     "print(f'There are currently {count} calculations.')"
