--- a/Python/section_5.ipynb
+++ b/Python/section_5.ipynb
@@ -696,14 +696,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "This is the documentation for the entire script.\n",
+    "\"\"\"\n",
+    "def func():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Automatically created module for IPython interactive environment\n"
+      "\n",
+      "This is the documentation for the entire script.\n",
+      "\n"
      ]
     }
    ],
