--- a/Python/section_9.ipynb
+++ b/Python/section_9.ipynb
@@ -294,7 +294,7 @@
     }
    ],
    "source": [
-    "# Plus step values\n",
+    "# Adding step value\n",
     "print(items[0:-1:2])"
    ]
   },
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "# Only the step value\n",
+    "# Only step value\n",
     "print(items[::-2])"
    ]
   },
@@ -331,7 +331,7 @@
     }
    ],
    "source": [
-    "# Try deleting all the values\n",
+    "# Removing all values\n",
     "print(items[::])\n",
     "print(items[:])"
    ]
@@ -379,7 +379,7 @@
     }
    ],
    "source": [
-    "# The slice range is greater than the number of elements added\n",
+    "# When the slice range is larger than the number of elements being added\n",
     "items = [1, 2, 3, 4, 5]\n",
     "items[2:6] = [7]\n",
     "print(items)"
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "# The slice range is less than the number of added elements\n",
+    "# When the slice range is smaller than the number of elements being added\n",
     "items = [1, 2, 3, 4, 5]\n",
     "items[2:3] = [7, 8, 9, 0]\n",
     "print(items)"
@@ -898,19 +898,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['茶', '桁', '9', '8', '7', '5', '3', '2', '1', '0']\n"
+      "['Hivan', 'Du', '9', '8', '7', '5', '3', '2', '1', '0']\n"
      ]
     }
    ],
    "source": [
-    "items = ['9', '3', '5', '2', '1', '7', '8', '0', '茶', '桁']\n",
+    "items = ['9', '3', '5', '2', '1', '7', '8', '0', 'Hivan', 'Du']\n",
     "items.sort(reverse=True)\n",
     "print(items)"
    ]
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[156], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m items \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m3\u001b[39m, [\u001b[39m'\u001b[39m\u001b[39ma\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mc\u001b[39m\u001b[39m'\u001b[39m]]\n\u001b[0;32m----> 2\u001b[0m res \u001b[39m=\u001b[39m items\u001b[39m.\u001b[39;49mdeepcopy()\n",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mcopy\u001b[39;00m\n\u001b[1;32m      2\u001b[0m items \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mc\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n\u001b[0;32m----> 3\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43mitems\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeepcopy\u001b[49m()\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'deepcopy'"
      ]
     }
