Math 01, Test the Latex

--- a/Python/section_24.ipynb
+++ b/Python/section_24.ipynb
@@ -9,7 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am a regular function\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a regular function\n",
+    "def old():\n",
+    "    print('I am a regular function')\n",
+    "\n",
+    "old() # Directly calling the regular function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +132,6 @@
     }
    ],
    "source": [
-    "\n",
     "def begin(f):\n",
     "    def begin_inner():\n",
     "        print('Got the WeChat of the girl, success... 1')\n",
@@ -125,6 +145,7 @@
     "        f()\n",
     "        print('Watched a late-night movie with the girl... 4')\n",
     "    return evolve_inner\n",
+    "\n",
     "\n",
     "@begin\n",
     "@evolve\n",
@@ -150,7 +171,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Define a decorator\n",
     "def outer(f):\n",
     "    def inner(var):\n",
