--- a/Math/3. Introduction to Mathematics - Basics of Calculus (Derivatives).md
+++ b/Math/3. Introduction to Mathematics - Basics of Calculus (Derivatives).md
@@ -46,6 +46,7 @@ Expanding a bit, do you know how the term "function" came to be in Chinese? Li S
 Besides, Li Shanlan's work on the power series expansion of the square root, and the study of various trigonometric functions, inverse trigonometric functions, and logarithmic functions, became one of the greatest achievements in 19th-century Chinese mathematics.
 
 Li Shanlan translated "function" as "函数" to indicate that this rule is enclosed in a black box. More abstractly, the number of independent variables can be many. The function's input doesn't have to be just one; it can be `n` of them. You can have 10 million or 1 million inputs. But the output is always one.
+
 $$
 x, y, \ldots \text{(independent variables)} \Rightarrow f(\text{function}) \Rightarrow z \text{(dependent variable)}
 $$
@@ -60,46 +61,52 @@ How can we understand derivatives? Let’s use a kinematics example to illustrat
 
 ![Motion Graph](https://files.mdnice.com/user/43981/8b53b1a6-4a67-4402-b86a-b29dab8c535b.png)
 
-First, let’s look at this graph. You can understand this coordinate system, right? In this Cartesian plane, the x-axis represents the independent variable, and the y-axis represents the dependent variable. In this motion problem, the x-axis (time) and y-axis (displacement) are represented as `(y: \text{displacement}, x: \text{time})`.
+First, let’s look at this graph. You can understand this coordinate system, right? In this Cartesian plane, the x-axis represents the independent variable, and the y-axis represents the dependent variable. In this motion problem, the x-axis (time) and y-axis (displacement) are represented as `(y: {displacement}, x: {time})`.
 
-The motion graph is the black line. Consider points `P_0` and `P`.
+The motion graph is the black line. Consider points $P_0$ and $P$.
 
-If we only look at this segment, the particle moves from `P_0` to `P`, so it displaces `&#916;y` in `&#916;x` time. We can obtain the average velocity ![image-20240802160825026](https://cdn.jsdelivr.net/gh/hivandu/notes/img/202408021620151.png).
+If we only look at this segment, the particle moves from $P_0$ to $P$, so it displaces $\Delta y$ in $\Delta x$ time. We can obtain the average velocity $\overline{v} = \frac{\Delta y}{\Delta x}$ .
 
-As we keep moving `P` closer to `P_0`, not by moving the particle but by bringing the points on the graph closer together, `&#916;y` and `&#916;x` decrease progressively until `P` nearly coincides with `P_0`. When they coincide, the segment between `P` and `P_0` becomes a tangent line (red line) as `&#916;x` approaches 0. This tangent line represents the instantaneous velocity at `P_0`. Based on the previous analysis, we get the formula for instantaneous velocity:
+As we keep moving $P$ closer to $P_0$, not by moving the particle but by bringing the points on the graph closer together, $\Delta y$ and $\Delta x$ decrease progressively until $P$ nearly coincides with $P_0$. When they coincide, the segment between $P$ and $P_0$ becomes a tangent line (red line) as $\Delta x$ approaches 0. This tangent line represents the instantaneous velocity at $P_0$. Based on the previous analysis, we get the formula for instantaneous velocity:
+
 $$
 \lim_{\Delta x \to 0} \frac{\Delta y}{\Delta x} = \tan a
 $$
-Here, `\lim` denotes taking the limit, and `&#916;x->0` means `&#916;x` approaches 0. The formula indicates that when \(&#916;x` approaches 0, `&#916;y / &#916;x` equals `\tan a`, which is the tangent value. That is, the ratio of the opposite side to the adjacent side in the angle `\angle a`, as shown in the diagram:
+
+Here, $\lim$ denotes taking the limit, and $\Delta x \rightarrow 0$ means $\Delta x$ approaches 0. The formula indicates that when $\Delta x$ approaches 0, $\frac{\Delta y}{\Delta x}$ equals $\tan a$, which is the tangent value. That is, the ratio of the opposite side to the adjacent side in the angle $\angle a$, as shown in the diagram:
 
 ![Tangent](https://files.mdnice.com/user/43981/ac2df882-fb9f-4ddc-ae48-888ff4dec6a6.jpg)
 
-This doesn't mean that the two line segments are `&#916;y` and `&#916;x`, but rather that their ratio is equal, as they have degenerated into a tangent.
+This doesn't mean that the two line segments are $\Delta y$ and $\Delta x$, but rather that their ratio is equal, as they have degenerated into a tangent.
 
 ## Derivative and Differentiation (Univariable Functions)
 
 Now we can introduce the formal definition of a derivative:
+
 $$
 y' = f'(x) = \lim_{h \to 0}\frac{f(x+h)-f(x)}{(x+h)-x}
 $$
+
 Don’t be intimidated by this mathematical formula. From my experience, many things that can be explained in plain language are given academic names and concepts that sound difficult. In reality, when you aren’t distracted by symbols and characters, these concepts are quite simple.
 
-What does a derivative mean? Generally, derivatives are represented by `'`, such as in `y'` or `f'`. It denotes the derivative of a function. For example, `f'(x)` represents the derivative of `f(x)`. The definition is essentially our approximation process. We take two points, one at `x+h` and one at `x`, and as `h` approaches 0, the numerator is the difference between `f(x+h)` and `f(x)` (which is `&#916;y`), and the denominator is `(x+h) - x`, which is `&#916;x`. So, the derivative is found by determining the slope of the tangent at point `P_0` on the graph.
+What does a derivative mean? Generally, derivatives are represented by `'`, such as in `y'` or `f'`. It denotes the derivative of a function. For example, `f'(x)` represents the derivative of `f(x)`. The definition is essentially our approximation process. We take two points, one at `x+h` and one at `x`, and as `h` approaches 0, the numerator is the difference between `f(x+h)` and `f(x)` (which is $\Delta y$), and the denominator is `(x+h) - x`, which is $\Delta x$. So, the derivative is found by determining the slope of the tangent at point $P_0$ on the graph.
 
 Here are some related definitions:
 
 - `y` is called the antiderivative of `y'`.
 - `y'` is called the derivative function (or derivative) of `y`.
 - Differentiation: When the independent variable `x` changes infinitesimally ($dx$), the change in the dependent variable `f(x)` ($df(x)$) is denoted by:
+
 $$
 df(x) = f'(x)dx
 $$
 
-The concept of differentiation is often confused with derivatives. Although they are related, they represent different meanings. For instance, in the above graph, the particle moves from `P_0` to `P` with an almost imperceptible change in `y`. The change in `x` (the horizontal shift) results in a small change in `y`. When the independent variable `x` increases or decreases slightly, `f(x)` changes accordingly. The change in both the independent and dependent variables is denoted by `d+variable`. The `d` represents differentiation. So, `dx` is how much `x` changes (which is very small, approaching 0), and `df(x)` is how much `f(x)` changes correspondingly.
+The concept of differentiation is often confused with derivatives. Although they are related, they represent different meanings. For instance, in the above graph, the particle moves from $P_0$ to $P$ with an almost imperceptible change in $y$. The change in $x$ (the horizontal shift) results in a small change in $y$. When the independent variable $x$ increases or decreases slightly, $f(x)$ changes accordingly. The change in both the independent and dependent variables is denoted by `d+variable`. The `d` represents differentiation. So, $dx$ is how much $x$ changes (which is very small, approaching 0), and $df(x)$ is how much $f(x)$ changes correspondingly.
 
 In neural networks, optimization and backpropagation involve propagating the derivative. Therefore, derivatives are a core concept.
 
 Let’s look at some common derivatives for elementary functions:
+
 $$
 \begin{align*}
 & C' = 0 & 
@@ -114,9 +121,7 @@ $$
 \end{align*}
 $$
 
-
-
-Let's look at an example of differentiation. We will use the definition of a derivative to prove the derivative of one function: \((\sin x)' = \cos x\).
+Let's look at an example of differentiation. We will use the definition of a derivative to prove the derivative of one function: $(\sin x)' = \cos x$.
 
 $$
 \begin{align*}
@@ -133,7 +138,7 @@ $$
 
 In the process of conversion, we used the trigonometric identity for the sum and difference of angles. If you're interested, you can [Google it](https://www.google.com/search?q=sum-to-product+identities&rlz=1C5CHFA_enCN920HK920&oq=sum-to-product+identities&gs_lcrp=EgZjaHJvbWUyCQgAEEUYORiABDIHCAEQABiABDIICAIQABgWGB4yCAgDEAAYFhgeMggIBBAAGBYYHjIICAUQABgWGB4yCAgGEAAYFhgeMggIBxAAGBYYHjIICAgQABgWGB4yCAgJEAAYFhge0gEHNzA4ajBqMagCALACAA&sourceid=chrome&ie=UTF-8).
 
-Let's explain this reasoning a bit. When `h` is infinitesimally small, \(\cos h = 1\), and \(\sin h = h\). With this step, the remaining parts become relatively easier to understand.
+Let's explain this reasoning a bit. When `h` is infinitesimally small, $\cos h = 1$, and $\sin h = h$. With this step, the remaining parts become relatively easier to understand.
 
 Next, let's discuss the rules for derivatives. If there are two functions, what is the derivative of their combination? There are essentially four cases: addition and subtraction, multiplication by a constant, multiplication of two functions, and division of two functions. The results are as follows:
 
@@ -150,7 +155,7 @@ $$
 
 I won't go through each case in detail here. It's best for everyone to review these rules and work through examples on your own after class; it shouldn't be too difficult.
 
-Now, let's look at a proof related to the derivative of the product of two functions. We want to prove why the derivative of the product of `u` and `v` is given by `u'v + uv'`. 
+Now, let's look at a proof related to the derivative of the product of two functions. We want to prove why the derivative of the product of $u$ and $v$ is given by $u'v + uv'$. 
 
 $$
 \begin{align*}
@@ -175,27 +180,19 @@ Have you heard of the term "Stochastic Gradient Descent"? Gradient descent is es
 
 Derivatives are for single-variable functions, where there is only one independent variable. However, in nature, we often encounter multi-variable functions where one independent variable cannot produce output according to a predetermined rule; it requires multiple inputs.
 
-For instance, \(x_1, x_2, ..., x_n\). The function's mapping rule gives an output based on these inputs, which is called a multi-variable function. Multi-variable functions have a problem: if there are many independent variables, does the dependent variable have a derivative with respect to each independent variable? Indeed, each partial derivative of the dependent variable with respect to each independent variable is called a partial derivative.
+For instance, $x_1, x_2, ..., x_n$. The function's mapping rule gives an output based on these inputs, which is called a multi-variable function. Multi-variable functions have a problem: if there are many independent variables, does the dependent variable have a derivative with respect to each independent variable? Indeed, each partial derivative of the dependent variable with respect to each independent variable is called a partial derivative.
 
-Multi-variable function: `y = f(x_1, x_2, ..., x_n)`
+Multi-variable function: $y = f(x_1, x_2, ..., x_n)$
 
 - The dependent variable has a partial derivative with respect to each independent variable, called a partial derivative.
 
-- Form: 
-
-  $$\frac{\partial y}{\partial x_1},\frac{\partial y}{\partial x_2},...,\frac{\partial y}{\partial x_n}$$
+- Form: $\frac{\partial y}{\partial x_1},\frac{\partial y}{\partial x_2},...,\frac{\partial y}{\partial x_n}$
 
 - How to compute: When solving for the partial derivative with respect to one variable, treat other variables as constants.
 
-- Gradient: A vector composed of partial derivatives in various directions 
+- Gradient: A vector composed of partial derivatives in various directions, $\frac{\partial y}{\partial x_1},\frac{\partial y}{\partial x_2},...,\frac{\partial y}{\partial x_n}$
 
-  $$\frac{\partial y}{\partial x_1},\frac{\partial y}{\partial x_2},...,\frac{\partial y}{\partial x_n}$$
-
-- Gradient notation: 
-
-  $\nabla f(x_1, x_2, ..., x_n)$
-
-  $$grad f(x_1, x_2, ..., x_n)$$
+- Gradient notation: $\nabla f(x_1, x_2, ..., x_n)$ or $grad f(x_1, x_2, ..., x_n)$
 
 You might find multi-variable functions complex, especially with interactions among variables. However, they don’t affect each other; treat them as constants during computation.
 
@@ -215,17 +212,13 @@ $$
 
 We've previously discussed that when finding the partial derivative with respect to one variable, we treat other variables as constants.
 
-What is the partial derivative of the function with respect to `x_1`? For `x_1^2`, according to the differentiation rules we've discussed, it is `2x_1`. That is:
-$$
-(x^n)' = nx^{n-1}
-$$
-If you're not familiar with this, you might want to review the derivatives of basic elementary functions. These functions are frequently used, so it's good to be familiar with them.
+What is the partial derivative of the function with respect to $x_1$? For $x_1^2$, according to the differentiation rules we've discussed, it is $2x_1$. That is: $(x^n)' = nx^{n-1}$. If you're not familiar with this, you might want to review the derivatives of basic elementary functions. These functions are frequently used, so it's good to be familiar with them.
 
-Now, let's look at the second term, `x_1x_2`. Here, `x_2` is treated as a constant, so it is equivalent to `Cx_1`, where `C` is constant. The derivative of `Cx_1` is `C`, which gives us `x_2`. For the last term, `\sin(x_2)`, since it does not contain `x_1`, it acts as a constant `C` with respect to `x_1`, and the derivative of a constant is `0`. Why is the derivative of a constant `0`? Because if a function is constant, the value of `y` does not change regardless of the value of `x`; it represents a horizontal line. 
+Now, let's look at the second term, $x_1x_2$. Here, $x_2$ is treated as a constant, so it is equivalent to $Cx_1$, where $C$ is constant. The derivative of $Cx_1$ is $C$, which gives us $x_2$. For the last term, $\sin(x_2)$, since it does not contain $x_1$, it acts as a constant $C$ with respect to $x_1$, and the derivative of a constant is `0`. Why is the derivative of a constant `0`? Because if a function is constant, the value of $y$ does not change regardless of the value of $x$; it represents a horizontal line. 
 
 For example, if `f(x) = 3`, no matter what `x` is, the function value is always `3`, which is a horizontal line. The rate of change of a horizontal line is `0`, and the derivative represents the rate of change.
 
-Next, let's look at the partial derivative of `y` with respect to `x_2`. Using the same method, the first term does not contain `x_2`, so its derivative is `0`. The second term, `x_1 \cdot x_2`, treats `x_1` as a constant, so the derivative is `x_1`. For the last term, `\sin(x_2)`, the derivative is `\cos(x_2)`, which we have previously proven.
+Next, let's look at the partial derivative of `y` with respect to $x_2$. Using the same method, the first term does not contain $x_2$, so its derivative is `0`. The second term, $x_1 \cdot x_2$, treats $x_1$ as a constant, so the derivative is $x_1$. For the last term, $\sin(x_2)$, the derivative is $\cos(x_2)$, which we have previously proven.
 
 This concludes our discussion on the basics of calculus in this introductory lesson on derivatives. However, the introduction is not over; we will cover linear algebra fundamentals (matrices), probability and statistics basics (random variables), and graph theory (concepts of graphs) in the next lesson.
 
