Math 04.md update

--- a/Math/4. Introduction to Mathematics - Fundamentals of Linear Algebra (Matrices).md
+++ b/Math/4. Introduction to Mathematics - Fundamentals of Linear Algebra (Matrices).md
@@ -128,7 +128,16 @@ Matrices have their own set of rules for operations, which are quite simple. Let
 
 $$
 \begin{align*}
-& \begin{split}  \begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} + \begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} = \begin{bmatrix} a_{11}+b_{11} & a_{12}+b_{12} \\ a_{21}+b_{21} & a_{22}+b_{22} \end{bmatrix} \end{split} \\ \\
+& \begin{split} 
+\begin{bmatrix} a_{11} & a_{12} \\ 
+a_{21} & a_{22} 
+\end{bmatrix} + 
+\begin{bmatrix} b_{11} & b_{12} \\ 
+b_{21} & b_{22} 
+\end{bmatrix} = 
+\begin{bmatrix} a_{11}+b_{11} & a_{12}+b_{12} \\
+a_{21}+b_{21} & a_{22}+b_{22} 
+\end{bmatrix} \end{split} \\ \\
 & \begin{split} \begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} - \begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} = \begin{bmatrix} a_{11}-b_{11} & a_{12}-b_{12} \\ a_{21}-b_{21} & a_{22}-b_{22} \end{bmatrix} \end{split}
 \end{align*}
 $$
