--- a/Math/4. Introduction to Mathematics - Fundamentals of Linear Algebra (Matrices).md
+++ b/Math/4. Introduction to Mathematics - Fundamentals of Linear Algebra (Matrices).md
@@ -138,7 +138,17 @@ b_{21} & b_{22}
 \begin{bmatrix} a_{11}+b_{11} & a_{12}+b_{12} \\
 a_{21}+b_{21} & a_{22}+b_{22} 
 \end{bmatrix} \end{split} \\ \\
-& \begin{split} \begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} - \begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} = \begin{bmatrix} a_{11}-b_{11} & a_{12}-b_{12} \\ a_{21}-b_{21} & a_{22}-b_{22} \end{bmatrix} \end{split}
+& \begin{split} 
+\begin{bmatrix} a_{11} & a_{12} \\
+a_{21} & a_{22} 
+\end{bmatrix} - 
+\begin{bmatrix} b_{11} & b_{12} \\ 
+b_{21} & b_{22} 
+\end{bmatrix} = 
+\begin{bmatrix} a_{11}-b_{11} & a_{12}-b_{12} \\
+a_{21}-b_{21} & a_{22}-b_{22} 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -148,7 +158,14 @@ Scalar multiplication of a matrix means multiplying each element of the matrix b
 
 $$
 \begin{align*}
-\begin{split} C \times \begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} =  \begin{bmatrix} Ca_{11} & Ca_{12} \\ Ca_{21} & Ca_{22} \end{bmatrix} \end{split}
+\begin{split} C \times 
+\begin{bmatrix} a_{11} & a_{12} \\
+a_{21} & a_{22} 
+\end{bmatrix} =  
+\begin{bmatrix} Ca_{11} & Ca_{12} \\
+Ca_{21} & Ca_{22} 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -158,7 +175,17 @@ Focus on matrix-vector multiplication. In neural networks, forward propagation i
 
 $$
 \begin{align*}
-& \begin{split} \begin{bmatrix} a_{11} & a_{12} \\ a_{21} & a_{22} \end{bmatrix} \times \begin{bmatrix} b_{11} & b_{12} \\ b_{21} & b_{22} \end{bmatrix} = \begin{bmatrix} a_{11}b_{11} + a_{12}b_{21} & a_{11}b_{12} + a_{12}b_{22} \\ a_{21}b_{11} + a_{22}b_{21} & a_{21}b_{12} + a_{22}b_{22} \\ \end{bmatrix} \end{split}
+& \begin{split} 
+\begin{bmatrix} a_{11} & a_{12} \\ 
+a_{21} & a_{22} 
+\end{bmatrix} \times 
+\begin{bmatrix} b_{11} & b_{12} \\
+b_{21} & b_{22} 
+\end{bmatrix} = 
+\begin{bmatrix} a_{11}b_{11} + a_{12}b_{21} & a_{11}b_{12} + a_{12}b_{22} \\ 
+a_{21}b_{11} + a_{22}b_{21} & a_{21}b_{12} + a_{22}b_{22} \\ 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -179,7 +206,14 @@ Let's look at an example: how do we calculate the result of multiplying the foll
 $$
 \begin{align*}
 \text{Example:} & \text{Calculate the result of multiplying the following two matrices:} \\
-& \begin{split} \begin{bmatrix} 1 & 2 \\ 3 & 4 \end{bmatrix} \times \begin{bmatrix} 5 & 6 \\ 7 & 8 \end{bmatrix} = ? \end{split}
+& \begin{split} 
+\begin{bmatrix} 1 & 2 \\ 
+3 & 4 
+\end{bmatrix} \times 
+\begin{bmatrix} 5 & 6 \\ 
+7 & 8 
+\end{bmatrix} = ? 
+\end{split}
 \end{align*}
 $$
 
@@ -187,7 +221,19 @@ Let's directly see the result:
 
 $$
 \begin{align*}
-\begin{split} \text{Solution:} \begin{bmatrix} 1 & 2 \\ 3 & 4  \end{bmatrix} \times \begin{bmatrix} 5 & 6 \\ 7 & 8 \end{bmatrix} & = \begin{bmatrix} 1\times5 + 2\times7 & 1\times6 + 2\times8 \\ 3\times5 + 4\times7 & 3\times6 + 4\times8 \end{bmatrix} \\ \\ & = \begin{bmatrix} 19 & 22 \\ 43 & 50 \end{bmatrix} \end{split}
+\begin{split} \text{Solution:} 
+\begin{bmatrix} 1 & 2 \\ 
+3 & 4  
+\end{bmatrix} \times 
+\begin{bmatrix} 5 & 6 \\ 
+7 & 8 \end{bmatrix} & = 
+\begin{bmatrix} 1\times5 + 2\times7 & 1\times6 + 2\times8 \\ 
+3\times5 + 4\times7 & 3\times6 + 4\times8 
+\end{bmatrix} \\ \\ 
+& = \begin{bmatrix} 19 & 22 \\ 
+43 & 50 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -199,7 +245,13 @@ Let's look at another example:
 
 $$
 \begin{align*}
-\begin{split} \begin{bmatrix} 10 & 11 \\ 12 & 13 \end{bmatrix} \begin{bmatrix} 4 \\ 5 \end{bmatrix} = ?
+\begin{split} 
+\begin{bmatrix} 10 & 11 \\ 
+12 & 13 
+\end{bmatrix} 
+\begin{bmatrix} 4 \\ 
+5 
+\end{bmatrix} = ?
 \end{split}
 \end{align*}
 $$
@@ -208,7 +260,19 @@ This example is similar, just a bit more special. Here, it is not a $2\times2$ m
 
 $$
 \begin{align*}
-\begin{split} \text{Solution:} \begin{bmatrix} 10 & 11 \\ 12 & 13 \end{bmatrix} \begin{bmatrix} 4 \\ 5 \end{bmatrix} & =  \begin{bmatrix} 10 \times 4 + 11 \times 5 \\ 12 \times 4 + 13 \times 5 \end{bmatrix} \\ \\ & = \begin{bmatrix} 95 \\ 113 \end{bmatrix} \end{split}
+\begin{split} \text{Solution:} 
+\begin{bmatrix} 10 & 11 \\ 
+12 & 13 
+\end{bmatrix} 
+\begin{bmatrix} 4 \\ 
+5 \end{bmatrix} & = 
+\begin{bmatrix} 10 \times 4 + 11 \times 5 \\ 
+12 \times 4 + 13 \times 5 
+\end{bmatrix} \\ \\ 
+& = \begin{bmatrix} 95 \\ 
+113 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -222,7 +286,13 @@ What can matrices do? Here, let’s use a geometric example to explain. I have a
 
 $$
 \begin{align*}
-\begin{split} \begin{bmatrix} \cos90^\circ & -\sin90^\circ \\ \sin90^\circ & \cos90^\circ \end{bmatrix} \begin{bmatrix} 2 \\ -2 \end{bmatrix} \end{split}
+\begin{split} 
+\begin{bmatrix} \cos90^\circ & -\sin90^\circ \\ 
+\sin90^\circ & \cos90^\circ 
+\end{bmatrix} 
+\begin{bmatrix} 2 \\ 
+-2 \end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
@@ -234,7 +304,20 @@ This vector can be represented as an arrow in the plane coordinate system. What 
 
 $$
 \begin{align*}
-\begin{split} & \begin{bmatrix} \cos90^\circ & -\sin90^\circ \\ \sin90^\circ & \cos90^\circ \end{bmatrix} \begin{bmatrix} 2 \\ -2 \end{bmatrix} \\ & =  \begin{bmatrix} 2\cos90^\circ + 2\sin90^\circ \\ 2\sin90^\circ - 2\cos90^\circ \end{bmatrix} \\ & =  \begin{bmatrix} 2 \\ 2 \end{bmatrix} \end{split}
+\begin{split} & 
+\begin{bmatrix} \cos90^\circ & -\sin90^\circ \\ 
+\sin90^\circ & \cos90^\circ 
+\end{bmatrix} 
+\begin{bmatrix} 2 \\ 
+-2 
+\end{bmatrix} \\ 
+& =  \begin{bmatrix} 2\cos90^\circ + 2\sin90^\circ \\ 
+2\sin90^\circ - 2\cos90^\circ 
+\end{bmatrix} \\ 
+& =  \begin{bmatrix} 2 \\ 
+2 
+\end{bmatrix} 
+\end{split}
 \end{align*}
 $$
 
