--- a/AI_Core/section_11.ipynb
+++ b/AI_Core/section_11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SECTION 11, Machine Learning"
+    "# SECTION 11, Evaluation Metrics"
    ]
   },
   {
