--- a/AI_Core/section_10.ipynb
+++ b/AI_Core/section_10.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SECTION 10, Machine Learning"
+    "# SECTION 10, Evaluation Metrics"
    ]
   },
   {
