--- a/AI_Core/section_13.ipynb
+++ b/AI_Core/section_13.ipynb
@@ -154,53 +154,24 @@
    "outputs": [],
    "source": [
     "def f(x):\n",
-    "    return (0, 1) # 是否买入"
+    "    return (0, 1) # Whether to buy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ic| one_hot(array): [[0, "
+      "[[0, 0, 0, 1, 0], [0, 1, 0, 0, 0], [0, 0, 0, 0, 1], [1, 0, 0, 0, 0], [0, 0, 1, 0, 0], [0, 1, 0, 0, 0], [0, 0, 0, 1, 0]]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "1, 0, 0, 0],\n",
-      "                     [0, 0, 0, 1, 0],\n",
-      "                     [0, 0, 0, 0, 1],\n",
-      "                     [0, 0, 1, 0, 0],\n",
-      "                     [1, 0, 0, 0, 0],\n",
-      "                     [0, 0, 0, 1, 0],\n",
-      "                     [0, 1, 0, 0, 0]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 1, 0, 0, 0],\n",
-       " [0, 0, 0, 1, 0],\n",
-       " [0, 0, 0, 0, 1],\n",
-       " [0, 0, 1, 0, 0],\n",
-       " [1, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 1, 0],\n",
-       " [0, 1, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "array = ['北京','上海','广州','宁夏','成都','上海','北京']\n",
+    "array = ['Beijing', 'Shanghai', 'Guangzhou', 'Ningxia', 'Chengdu', 'Shanghai', 'Beijing']\n",
     "\n",
     "def one_hot(elements):\n",
     "    pure = list(set(elements))\n",
@@ -213,7 +184,8 @@
     "        vectors.append(vec)\n",
     "\n",
     "    return vectors\n",
-    "ic(one_hot(array))"
+    "\n",
+    "print(one_hot(array))"
    ]
   },
   {
